# autocad-fastmcp

./: .gitignore  .pr5-ci-kick  AGENTS.md  LICENSE  README.md  pyproject.toml  start_cloudflare_tunnel.bat  start_mcp_chatgpt.bat
apps/desktop_agent/: README.md  launcher.py  pyproject.toml  pysidedeploy.spec
apps/desktop_agent/src/autocad_desktop_agent/: __init__.py  __main__.py  config.py  core.py  credentials.py  diagnostics.py  executor.py  ledger.py  manifest.py  state.py
apps/desktop_agent/src/autocad_desktop_agent/runtime/: __init__.py  autolisp_file_ipc.py  broker.py  contracts.py  managed_dotnet.py
apps/desktop_agent/src/autocad_desktop_agent/ui/: __init__.py  window.py
apps/desktop_agent/tests/: test_agent_ui_runtime.py  test_boundaries.py  test_core.py  test_credentials.py  test_executor.py  test_ledger.py  test_network.py  test_phase5_legacy_executor_regression.py  test_phase5_safe_diagnostics.py  test_runtime_broker.py  test_ui.py
docs/: auto-dimension.md
lisp-code/: attribute_tools.lsp  auto_dimension.lsp  auto_dimension_loader.lsp  mcp_dispatch.lsp
poc/fastmcp-phase0/: README.md  pyproject.toml
poc/fastmcp-phase0/snapshots/: resources.json  tools.json
poc/fastmcp-phase0/src/fastmcp_phase0/: __init__.py  app.py  auth.py  contracts.py  services.py
poc/fastmcp-phase0/tests/: conftest.py  test_auth.py  test_backend_snapshot.py  test_contract.py  test_dual_adapter_parity.py  test_errors.py  test_preview_artifacts.py  test_static_contract.py  test_transport.py
poc/phase3-simulated-agent/: pyproject.toml
poc/phase3-simulated-agent/src/autocad_phase3_sim_agent/: __init__.py  __main__.py  agent.py  scenarios.py
poc/phase3-simulated-agent/tests/: test_simulator.py
scripts/: build-phase4-agent.ps1  build-phase5-managed-host.ps1  build-phase5-release-bundle.ps1  install-phase5-lab-bundle.ps1  install-phase5-release-bundle.ps1  install-phase5-signed-r25.ps1  new-phase5-lab-signing-certificate.ps1  new-phase5-signed-r25-release.ps1  phase1_1_bootstrap_part0.py  phase1_1_bootstrap_part1.py  phase1_1_bootstrap_part2.py  pr5_review_fix.py  (+13 more)
services/gateway/: README.md  phase4-c1.env.example  pyproject.toml
services/gateway/snapshots/: phase3_resources.json  phase3_tools.json  prompts.json  resources.json  tools.json
services/gateway/src/autocad_gateway/: __init__.py  __main__.py  app.py  auth.py  backend.py  composition.py  contracts.py  durable_services.py  services.py  snapshots.py
services/gateway/src/autocad_gateway/application/: __init__.py  job_service.py
services/gateway/src/autocad_gateway/domain/: __init__.py  jobs.py
services/gateway/src/autocad_gateway/infrastructure/: __init__.py
services/gateway/src/autocad_gateway/infrastructure/agent_transport/: __init__.py  authenticator.py  connection_registry.py  websocket_endpoint.py
services/gateway/src/autocad_gateway/infrastructure/sqlite/: __init__.py  database.py  repositories.py
services/gateway/src/autocad_gateway/infrastructure/sqlite/migrations/: 0001_phase3.sql  0002_phase31.sql  0003_phase4_c1.sql
services/gateway/tests/: conftest.py  test_agent_protocol.py  test_auth_fixture.py  test_contract.py  test_dispatch_reconcile.py  test_gateway_restart.py  test_job_state_machine.py  test_launcher_config.py  test_phase21_hardening.py  test_phase31_agent_transport.py  test_phase31_application_hardening.py  test_phase3_mcp_flow.py  test_phase4_c1.py  test_phase5_public_regression.py  test_phase5_runtime_evidence_isolation.py  test_service.py  test_sqlite_repositories.py  test_stale_and_deadline.py  test_transport.py
(+110 files in other folders)
