[project]
name = "autocad-fastmcp-gateway"
version = "0.2.0"
description = "Local FastMCP public v1 facade for AutoCAD read operations"
requires-python = ">=3.10,<3.14"
dependencies = [
    "autocad-mcp",
    "cad-core",
    "fastmcp==3.4.4",
    "httpx>=0.27,<1.0",
    "PyJWT[crypto]>=2.11.0,<3.0",
    "asgi-lifespan>=2.1,<3.0",
    "uvicorn>=0.30,<1.0",
]

[dependency-groups]
test = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autocad_gateway"]

[tool.uv.sources]
autocad-mcp = { path = "../..", editable = false }
cad-core = { path = "../../packages/cad_core", editable = false }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
